[package]
name = "sonor"
version = "0.1.0"
authors = ["Jakob Hellermann <jakob.hellermann@protonmail.com>"]
description = "a library for controlling sonos speakers"
repository = "https://github.com/jjakobh/upnp"
categories = ["network-programming", "asynchronous"]
keywords = ["sonos", "async", "audio", "upnp"]
license = "MIT"
edition = "2018"

[dependencies]
log = "0.4"
rupnp = "0.1.1"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
roxmltree = "0.11"

[dev-dependencies]
tokio = { version = "0.2", features = ["macros", "time"] }
futures = "0.3"
